--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdkVersion 29
@@ -34,8 +35,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // or "kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0" // JVM dependency
+
     //Coroutines
     def coroutinesVersion = '1.3.5'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+
+    //Retrofit
+    def retrofitVersion = '2.8.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+
+    //okHTTP
+    def okHTTPVersion = '4.4.0'
+    implementation "com.squareup.okhttp3:okhttp:$okHTTPVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHTTPVersion"
+
+    //
+    def coroutinesAdapterVersion = '0.9.2'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutinesAdapterVersion"
 }
